<resources>
    <string name="app_name">NotesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>
    <string name="subtitle">Subtitle…</string>
    <string name="title">Title</string>
    <string name="delete_text">Are you sure want to delete\n This Note?</string>
    <string name="no_btn">No</string>
    <string name="yes_btn">Yes</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="filte">Filte</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
</resources>