<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="#A8A8A8"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/btn_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:background="@drawable/no_btn"
        android:layout_marginEnd="10dp"
        android:text="@string/no_btn"/>

    <TextView
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:background="@drawable/yes_btn"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/yes_btn"/>


</LinearLayout>