<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/filter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_filter_list_24"
                android:background="@drawable/btn_filter_shape2"
                android:contentDescription="@string/filte" />

            <TextView
                android:id="@+id/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_filter_shape"
                android:textColor="@color/red"
                android:text="@string/high"
                android:paddingStart="25dp"
                android:fontFamily="sans-serif-black"
                android:paddingEnd="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_filter_shape"
                android:textColor="@color/yellow"
                android:text="@string/medium"
                android:fontFamily="sans-serif-black"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/btn_filter_shape"
                android:fontFamily="sans-serif-black"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/low"
                android:textColor="#6EC068" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_home" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_baseline_add_24"
            app:fabCustomSize="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>